public enum ConstructionType {
    HOUSE,
    BLOCK,
    OFFICE_BUILDING
}
