public enum EmployeeType {
    PART_TIME,
    BASE_SALARY
}
