public class Engineer extends Employee{
    public Engineer(String name, EmployeeType employeeType) {
        super(name, 700, 40, 20, employeeType);
    }
}
