public class SiteManager extends Employee{
    public SiteManager(String name, EmployeeType employeeType) {
        super(name, 1000, 40, 5, employeeType);
    }
}
