public class Worker extends Employee {
    public Worker(String name, EmployeeType employeeType) {
        super(name, 400, 6, 15, employeeType);
    }
}
